--- a/config.example.yml
+++ b/config.example.yml
@@ -1,6 +1,6 @@
-# Rename this file to config.yml
+# Copy this file and rename to config.yml
 GameDir: 'C:\Program Files (x86)\Steam\steamapps\common\Stellaris\' # Single-quotes to disable escaping
-ConfigDir: "./cwtools-stellaris-config/config/" # Obtain files from https://github.com/cwtools/cwtools-stellaris-config
+ConfigDir: "./cwtools-stellaris-config/config/" # Git submodule from https://github.com/cwtools/cwtools-stellaris-config
 OutDir: "./mod/localisation/replace/"
 ModPaths:
   - "Path/To/MyMod1/" # Directories must end with '/' or '\'
